# hack_interledger

./: .gitignore  README.md
Back_LLM/: .gitignore  CUSTOMIZACION_LLM.md  INSTRUCCIONES.md  README.md  check_api_key.py  main.py  pyproject.toml  start_server.sh  start_server_simple.sh  test_api.py  test_direct.py  test_with_example.py
Back_LLM/apps/: config_env.py
Back_LLM/apps/Interledger_LLM/api/: main.py
Back_LLM/apps/Interledger_LLM/api/agent/: main.py  system_prompt.md
llm_back/: Dockerfile  pyproject.toml  run_server.py  setup_env.sh  test_api.sh  test_with_example.py
llm_back/apps/Interledger_LLM/: __init__.py
llm_back/apps/Interledger_LLM/api/: main.py  payment.py
llm_back/apps/Interledger_LLM/api/agent/: system_prompt.md
op/: .dockerignore  DOCKER.md  Dockerfile  README.md  config_env.js  package-lock.json  package.json  setup.js
op/controlers/: completePayment.js  initiatePayment.js  sendPayment.js  something.js
op/server/: index.js
ws_bot/: Dockerfile  README.md  config_env.py  main.py  pyproject.toml
ws_bot/llm_test/: server.py
